# ironverse-editor

./: .gitignore  Cargo.toml  Makefile.toml  index.html
assets/: save.toml  save1.toml
assets/shaders/: triplanar.wgsl  triplanar_fragment.wgsl  triplanar_vertex.wgsl  triplanar_vertices.wgsl
src/: main.rs
src/camera/: first_person.rs  mod.rs  third_person.rs
src/components/: camera.rs  chunk.rs  chunk_edit.rs  chunk_preview.rs  chunks.rs  mod.rs  player.rs  player_movement.rs  range.rs  raycast.rs  save.rs
src/data/: mod.rs
src/debugger/: camera.rs  chunks.rs  mod.rs  raycast.rs  text.rs
src/defaultgraphics/: chunk_preview.rs  chunks.rs  mod.rs
src/entities/: mod.rs
src/graphics/: camera.rs  chunk_preview.rs  chunks.rs  mod.rs  player.rs  range.rs
src/graphics_low/: mod.rs
src/graphics_normal/: chunk_preview.rs  chunks.rs  mod.rs
src/input/: hotbar.rs  mod.rs  mouse_input.rs
src/minimalgraphics/: chunk_preview.rs  chunks.rs  mod.rs
src/native/: load_file.rs  mod.rs  save.rs
src/normalgraphics/: chunk_preview.rs  chunks.rs  mod.rs
src/physics/: mod.rs
src/states/: load.rs  mod.rs  play.rs  start.rs
src/terrain/: mod.rs
src/tests/: chunk.rs  mod.rs
src/ui/: hotbar.rs  inventory.rs  menu.rs  mod.rs
src/utils/: mod.rs
src/wasm/: load_data.rs  load_file.rs  mod.rs  save_data.rs
