[package]
name = "ironverse-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
# voxels = { git = "https://github.com/ironverse/voxels.git", branch="0.2" }
# bevy_flycam = { git = "https://github.com/Nickan/bevy_flycam.git", branch="MakeMouseMovementWorkOnWasm" }

voxels = { path = "../voxels" }
bevy_flycam = { path = "../bevy_flycam" }

bevy_egui = "0.20.3"
rfd = "0.11"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
flume = "0.10.14"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "HtmlElement", 
  "ErrorEvent", 
  "Window",
]