[package]
name = "ironverse-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = "6.1.0"
bevy = "0.10.1"
bevy_egui = "0.20.3"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
rfd = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.7.3"

# bevy_flycam = { git = "https://github.com/Nickan/bevy_flycam.git", branch="MakeMouseMovementWorkOnWasm" }
bevy_flycam = { path = "../bevy_flycam" }
# voxels = { git = "https://github.com/ironverse/voxels.git", branch="0.2" }
voxels = { path = "../voxels" }


[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "HtmlElement", 
  "ErrorEvent", 
  "Window",
  "Url",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
flume = "0.10.14"
js-sys = "0.3"
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = "0.4.19"

[features]
default = []
minimal = ["minimalgraphics", "gui_none"]
normal = ["normalgraphics", "gui_normal"]
minimalgraphics = []
normalgraphics = []
gui_none = []
gui_normal = []



