[package]
name = "ironverse-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-bytes = { version = "6.1.0", optional = true }
bevy = "0.10.1"
bevy_egui = { version = "0.20.3", optional = true }
noise = { version = "0.7.0", optional = true }
cfg-if = "1.0.0"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ], optional = true }
rfd = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
toml = { version = "0.7.3", optional = true }

# bevy_flycam = { git = "https://github.com/Nickan/bevy_flycam.git", branch="MakeMouseMovementWorkOnWasm" }
bevy_flycam = { path = "../bevy_flycam" }
# voxels = { git = "https://github.com/ironverse/voxels.git", branch="0.2" }
voxels = { path = "../voxels" }


fast-surface-nets = "0.2.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "HtmlElement", 
  "ErrorEvent", 
  "Window",
  "Url",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
flume = "0.10.14"
js-sys = "0.3"
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = "0.4.19"

[features]
native = [
  "rapier3d",
  "serde",
  "chunk",

  "chunk_graphics"
]

minimum = []
chunk = []

# Graphics
chunk_graphics = []


tests = ["minimum", "test_chunk", "bevy_egui", "noise"]
test_chunk = []
test_raycast = []


# default = ["normal"]
# minimal = ["minimalgraphics", "gui_none"]
# normal = ["normalgraphics", "gui_normal"]
# minimalgraphics = []
# normalgraphics = []
# gui_none = []
# gui_normal = []

# tests = ["test_chunk"]
# test_chunk = []
# test_raycast = []


# empty = []



